WEC-41: fix cost align

--- a/server/static/wechat/less/order/course_choosing.less
+++ b/server/static/wechat/less/order/course_choosing.less
@@ -326,6 +326,7 @@
     line-height: @payAreaLineHeight;
     font-size: @subTitleSize;
     color: @grayDark;
+    text-align: left;
   }
   .action-area a{
     height: @payAreaLineHeight;
